--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,16 +5,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
 WORKDIR /src
-COPY ["Catalogue.csproj", ""]
-RUN dotnet restore "./Catalogue.csproj"
+COPY ["Catalogue/Catalogue.csproj", "Catalogue/"]
+RUN dotnet restore "Catalogue/Catalogue.csproj"
 COPY . .
-WORKDIR "/src/."
-RUN dotnet build "Catalogue.csproj" -c Release -o /app
+WORKDIR "/src/Catalogue"
+RUN dotnet build "Catalogue.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Catalogue.csproj" -c Release -o /app
+RUN dotnet publish "Catalogue.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app .
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Catalogue.dll"]
